--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
----
-spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/AlenaGithub/configserver.git
-          #only include username and password when it is private repo
-security:
-  user:
+--- 
+security: 
+  user: 
     name: alena
-    password: alena123         
+    password: alena123
+spring: 
+  cloud: 
+    config: 
+      server: 
+        git: 
+          uri: https://github.com/AlenaGithub/config.git
+
